sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value tab
    val tmp = tab(i)
              ^AlgInsertionSort:6: error: not found: value tab
    while (j>0 && tab(j-1)>tmp) {
                  ^AlgInsertionSort:7: error: not found: value tab
      tab(j)=tab(j-1)
      ^AlgInsertionSort:7: error: not found: value tab
      tab(j)=tab(j-1)
             ^AlgInsertionSort:10: error: not found: value tab
    tab (j) = tmp
    ^