sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i <- 1 to getNombreValeurs-1)  {
    val tmp = tab(i)
    var j=i
    while (j>0 && tab(j-1)>tmp) {
      tab(j)=tab(j-1)
      j = j-1
    }
    tab (j) = tmp
  }
}